Closed Bug 1170822 Opened 11 years ago Closed 11 years ago

Controlled documents enumerator should match scopes instead of pointers.

Categories

(Core :: DOM: Service Workers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: nsm, Assigned: nsm)

References

Details

Attachments

(1 file)

Bug 1170822 - Fix controlled documents comparison. r=catalinb
Attachment #8614390 - Flags: review?(catalin.badea392)
Assignee: nobody → nsm.nikhil
Comment on attachment 8614390 [details] MozReview Request: Bug 1170822 - Fix controlled documents comparison. r=catalinb https://reviewboard.mozilla.org/r/9929/#review9451 Ship It!
Attachment #8614390 - Flags: review+
Comment on attachment 8614390 [details] MozReview Request: Bug 1170822 - Fix controlled documents comparison. r=catalinb https://reviewboard.mozilla.org/r/9929/#review9459 lgtm
Attachment #8614390 - Flags: review?(catalin.badea392) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: