Bug 1170822 - Fix controlled documents comparison. r=catalinb